# ALM

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  justfile  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: code-review.md  docs.md  finance.md  quarto.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml
assumptions/: credit_spreads.csv
data/soa_tables/: iam_2012_female_basic_anb.csv  iam_2012_male_basic_anb.csv
docs/: brennen-slaney.md  index.md
docs/how-to/: creating-quarto-reports.md  environment-setup.md  getting-started.md  running-scripts.md
docs/reference/: credit-spreads.md  data-sources.md  fia.md  fixed-income.md  immunization-with-swaps.md  project-structure.md  ref-fia.qmd  ref-spia.qmd  ref-term-life.qmd  ref-whole-life.qmd  spia.md  term-life.md  whole-life.md
quarto/: _quarto.yaml  alm.qmd  convexity-hedging.qmd  duration-hedging-with-swaps.html  duration-hedging-with-swaps.qmd  ua_presentation.qmd
scripts/: run_alm_demonstration.py
src/alm/: __init__.py  asset.py  core.py  liability.py  plot.py  read.py  utils.py
tests/: test_alm.py  test_asset.py  test_block.py  test_core.py  test_liability.py  test_plot.py  test_read.py  test_utils.py
